src/test/deca/syntax/invalid/homemade/test/test_lex_inv_ligne_in_reserved.deca
// Test avec retour a la ligne au sein d'un mot reservé
{
    prin
    tln();
}